# CTQ-Enterprise

IT Ticket Quality Analyser/data/: tickets.db-journal
IT Ticket Quality Analyser/it-ticket-quality-analyser/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  requirements.txt
IT Ticket Quality Analyser/it-ticket-quality-analyser/data/samples/: changes_sample.csv  incidents_sample.csv  requests_sample.csv
IT Ticket Quality Analyser/it-ticket-quality-analyser/docs/: APPROACH.md  DATA_DICTIONARY.md  USAGE.md
IT Ticket Quality Analyser/it-ticket-quality-analyser/examples/: generate_sample_data.py
IT Ticket Quality Analyser/it-ticket-quality-analyser/src/ticket_analyser/: __init__.py  cli.py  config.py  pipeline.py
IT Ticket Quality Analyser/it-ticket-quality-analyser/src/ticket_analyser/analysis/: __init__.py  automation.py  change_risk.py  quality.py  sla.py  trends.py
IT Ticket Quality Analyser/it-ticket-quality-analyser/src/ticket_analyser/dashboard/: __init__.py  html_dashboard.py
IT Ticket Quality Analyser/it-ticket-quality-analyser/src/ticket_analyser/db/: __init__.py  store.py
IT Ticket Quality Analyser/it-ticket-quality-analyser/src/ticket_analyser/ingest/: __init__.py  loader.py
IT Ticket Quality Analyser/it-ticket-quality-analyser/src/ticket_analyser/reports/: __init__.py  markdown_report.py
IT Ticket Quality Analyser/it-ticket-quality-analyser/tests/: test_ingest.py  test_pipeline_smoke.py  test_quality.py  test_sla.py
IT Ticket Quality Analyser/output/: dashboard.html  report.md
